<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.mainactivity.MainActivityNewsApp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue"
       app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/topHeadLines"
        android:text="@string/top_headlines"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue"
        app:layout_constraintTop_toBottomOf="@+id/topHeadLines"
        android:id="@+id/newsSources"
        android:text="@string/news_sources"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue"
        app:layout_constraintTop_toBottomOf="@+id/newsSources"
        android:id="@+id/tesla"
        android:text="@string/tesla_articles"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue"
        app:layout_constraintTop_toBottomOf="@+id/tesla"
        android:id="@+id/countries"
        android:text="@string/countries"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue"
        app:layout_constraintTop_toBottomOf="@+id/countries"
        android:id="@+id/languages"
        android:text="@string/languages"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_blue"
        app:layout_constraintTop_toBottomOf="@+id/languages"
        android:id="@+id/search"
        android:text="@string/search"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>